# may

./: .gitignore  .nextest.toml  .travis.yml  AI_USAGE_GUIDE.md  CHANGES.md  Cargo.toml  README.md  appveyor.yml  build.rs  completed_subtask.md  performace.md
.github/workflows/: rust.yml
benches/: lib.rs
docs/: CLS_instead_of_TLS.md  may_caveat.md  tune_stack_size.md
examples/: ADVANCED_EXAMPLES_PRD.md  ADVANCED_EXAMPLES_QUICK_REFERENCE.md  README.md  cqueue.rs  echo.rs  echo_client.rs  echo_udp.rs  echo_udp_client.rs  echo_udp_client1.rs  fan_out_fan_in.rs  gen.rs  general_io.rs  http.rs  https.rs  loop_select.rs  one_billion_row_challenge.rs  one_billion_row_challenge_ultra_optimized.rs  pipeline_data_processing.rs  producer_consumer_bounded.rs  quic_server_example.rs  safe_spawn.rs  scoped.rs  select.rs  single_thread_schedule.rs  sleep.rs  spawn.rs  temp_udp_client.rs  websocket.rs
examples/cert/: mycert.pfx  private.pem  public.pem
examples/sample_data/: README.md  events.txt  sensor_data.xml  transactions.json  users.csv
may_queue/: Cargo.toml  build.rs
may_queue/src/: atomic.rs  block_node.rs  cpu_local.rs  lib.rs  mpmc_bounded.rs  mpsc.rs  mpsc_list.rs  mpsc_list_v1.rs  mpsc_seg_queue.rs  seg_queue.rs  spmc.rs  spsc.rs  spsc_seg_queue.rs  tokio_queue.rs  unordered_mpsc.rs
scripts/: CI_SETUP.md  README.md  ci_pr_report.sh  coverage.sh  coverage_formatter.py  generate_pr_report.sh  test_reporter.py
src/: cancel.rs  config.rs  coroutine.rs  coroutine_impl.rs  cqueue.rs  crossbeam_queue_shim.rs  fs.rs  join.rs  lib.rs  likely.rs  local.rs  macros.rs  park.rs  pool.rs  safety.rs  scheduler.rs  scoped.rs  sleep.rs  timeout_list.rs  yield_now.rs  yield_out.rs
src/io/: README.txt  co_io.rs  co_io_err.rs  event_buf.rs  event_loop.rs  mod.rs  split_io.rs  thread.rs
src/io/sys/unix/: cancel.rs  co_io.rs  epoll.rs  kqueue.rs  linux_aio_bindings.rs  mod.rs  split_io.rs  wait_io.rs
src/io/sys/unix/fs/: fs_read.rs  fs_write.rs  mod.rs
src/io/sys/unix/fs/linux/: aio_bindings.rs  aio_manager.rs  aio_wrapper.h  fs_read.rs  fs_write.rs  mod.rs
src/io/sys/unix/net/: mod.rs  socket_peek.rs  socket_read.rs  socket_write.rs  socket_write_vectored.rs  tcp_listener_accept.rs  tcp_listener_accpet.rs  tcp_stream_connect.rs  udp_recv_from.rs  udp_send_to.rs  unix_listener_accept.rs  unix_listener_accpet.rs  unix_recv_from.rs  unix_send_to.rs  unix_stream_connect.rs
src/io/sys/windows/: cancel.rs  co_io.rs  iocp.rs  miow.rs  mod.rs  net.rs
src/io/sys/windows/fs/: fs_read.rs  fs_write.rs  mod.rs
src/io/sys/windows/net/: miow.rs  mod.rs  socket_peek.rs  socket_read.rs  socket_write.rs  tcp_listener_accept.rs  tcp_listener_accpet.rs  tcp_stream_connect.rs  tcp_stream_read.rs  tcp_stream_write.rs  udp_recv_from.rs  udp_send_to.rs
src/io/sys/windows/pipe/: mod.rs  pipe_read.rs  pipe_write.rs
src/net/: mod.rs  tcp.rs  udp.rs  unix.rs
src/net/quic/: conn.rs  crypto.rs  error.rs  frame.rs  mod.rs  packet.rs  server.rs  stream.rs
src/os/unix/: mod.rs  net.rs
src/sync/: atomic_dur.rs  atomic_option.rs  atomic_option_stable.rs  barrier.rs  blocking.rs  boxed_option.rs  condvar.rs  delay_drop.rs  fast_blocking.rs  mod.rs  mpmc.rs  mpsc.rs  mpsc_list.rs  mutex.rs  poison.rs  rwlock.rs  seg_queue.rs  semaphore.rs  semphore.rs  spsc.rs  sync_flag.rs  tokio_queue.rs  wait_group.rs  waiter.rs
src/sync/queue/: mod.rs  mpsc_seg_queue.rs  seg_queue.rs  spsc_seg_queue.rs
tasks/: MAY_IMPROVEMENT_ANALYSIS.md  MAY_MESSAGE_PASSING_IMPROVEMENTS.md  tasks.md
tests/: cqueue.rs  integration_tests.rs  lib.rs  local.rs
