[package]
name = "may"
version = "0.3.22"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Xudong-Huang/may.git"
homepage = "https://github.com/Xudong-Huang/may.git"
documentation = "https://docs.rs/may"
description = "Rust Stackful Coroutine Library"
readme = "README.md"
keywords = ["coroutine", "async", "multi-thread"]
categories = ["concurrency"]
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
    "docs/**/*",
]

[badges]
travis-ci = { repository = "Xudong-Huang/may" }
appveyor = { repository = "Xudong-Huang/may", service = "github" }

[dependencies]
log = "0.4"
num_cpus = "1.1"
smallvec = "1.2"
generator = ">= 0.7.1"
crossbeam = "0.8"
lazy_static = "1"
parking_lot = "0.12"
socket2 = { version = "0.4", features = ["all"] }
may_queue = { version = "0.1", path = "may_queue" }

[target.'cfg(unix)'.dependencies]
nix = "0.25"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
miow = "0.4"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.28"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]


[dev-dependencies]
bytes = "1.0"
serde = "1.0"
docopt = "1.0"
tempdir = "0.3"
httparse = "1.1"
native-tls = "0.2"
tungstenite = "0.17"
serde_derive = "1.0"


[profile.release]
lto = true

[build-dependencies]
rustversion = "1.0"

[workspace]
members = ["may_queue"]
