[package]
name = "may_queue"
version = "0.1.7"
edition = "2018"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Xudong-Huang/may.git"
homepage = "https://github.com/Xudong-Huang/may.git"
documentation = "https://docs.rs/may_queue"
description = "May's internal queue library"
keywords = ["coroutine", "mpsc"]
categories = ["concurrency"]
build = "build.rs"

[dependencies]
crossbeam = "0.8"

[build-dependencies]
rustc_version = "0.2"

