[package]
name = "may_queue"
version = "0.1.21"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Xudong-Huang/may.git"
homepage = "https://github.com/Xudong-Huang/may.git"
documentation = "https://docs.rs/may_queue"
description = "May's internal queue library"
keywords = ["coroutine", "mpsc"]
categories = ["concurrency"]
build = "build.rs"

[dependencies]
smallvec = "1"
crossbeam-utils = "0.8"

[build-dependencies]
rustversion = "1.0"

[features]
default = ["inner_cache"]
inner_cache = []

